Removed lombok leftovers